use prettier to format project

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,46 +1,46 @@
 ---
-import Icon, { Props as IconProps } from "./Icon.astro";
-import ThemeToggle from "./ThemeToggle.astro";
-import { Image } from "astro:assets";
-import Logo from "../assets/logo.png";
+import Icon, { Props as IconProps } from './Icon.astro';
+import ThemeToggle from './ThemeToggle.astro';
+import { Image } from 'astro:assets';
+import Logo from '../assets/logo.png';
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
-  { label: "Home", href: "/" },
-  { label: "Contact", href: "mailto:torn4dom4n@gmail.com" },
+  { label: 'Home', href: '/' },
+  { label: 'Contact', href: 'mailto:torn4dom4n@gmail.com' },
 ];
 
 /** Icon links to social media */
-const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
+const iconLinks: { label: string; href: string; icon: IconProps['icon'] }[] = [
   {
-    label: "GitHub",
-    href: "https://github.com/torn4dom4n",
-    icon: "github-logo",
+    label: 'GitHub',
+    href: 'https://github.com/torn4dom4n',
+    icon: 'github-logo',
   },
   {
-    label: "Twitter",
-    href: "https://twitter.com/torn4dom4n",
-    icon: "twitter-logo",
+    label: 'Twitter',
+    href: 'https://twitter.com/torn4dom4n',
+    icon: 'twitter-logo',
   },
   {
-    label: "Facebook",
-    href: "https://facebook.com/torn4dom4n",
-    icon: "facebook-logo",
+    label: 'Facebook',
+    href: 'https://facebook.com/torn4dom4n',
+    icon: 'facebook-logo',
   },
   {
-    label: "Instagram",
-    href: "https://instagram.com/torn4dom4n",
-    icon: "instagram-logo",
+    label: 'Instagram',
+    href: 'https://instagram.com/torn4dom4n',
+    icon: 'instagram-logo',
   },
   {
-    label: "YouTube",
-    href: "https://www.youtube.com/@torn4dom4n",
-    icon: "youtube-logo",
+    label: 'YouTube',
+    href: 'https://www.youtube.com/@torn4dom4n',
+    icon: 'youtube-logo',
   },
   {
-    label: "LinkedIn",
-    href: "https://www.linkedin.com/in/torn4dom4n",
-    icon: "linkedin-logo",
+    label: 'LinkedIn',
+    href: 'https://www.linkedin.com/in/torn4dom4n',
+    icon: 'linkedin-logo',
   },
 ];
 ---
@@ -75,11 +75,11 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
             <a
               aria-current={Astro.url.pathname === href}
               class:list={[
-                "link",
+                'link',
                 {
                   active:
                     Astro.url.pathname === href ||
-                    (href !== "/" && Astro.url.pathname.startsWith(href)),
+                    (href !== '/' && Astro.url.pathname.startsWith(href)),
                 },
               ]}
               href={href}
@@ -115,33 +115,33 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
       super();
 
       // Inject menu toggle button when JS runs.
-      this.appendChild(this.querySelector("template")!.content.cloneNode(true));
-      const btn = this.querySelector("button")!;
+      this.appendChild(this.querySelector('template')!.content.cloneNode(true));
+      const btn = this.querySelector('button')!;
 
       // Hide menu (shown by default to support no-JS browsers).
-      const menu = document.getElementById("menu-content")!;
+      const menu = document.getElementById('menu-content')!;
       menu.hidden = true;
 
       /** Set whether the menu is currently expanded or collapsed. */
       const setExpanded = (expand: boolean) => {
-        btn.setAttribute("aria-expanded", expand ? "true" : "false");
+        btn.setAttribute('aria-expanded', expand ? 'true' : 'false');
         menu.hidden = !expand;
       };
 
       // Toggle menu visibility when the menu button is clicked.
-      btn.addEventListener("click", () => setExpanded(menu.hidden));
+      btn.addEventListener('click', () => setExpanded(menu.hidden));
 
       // Hide menu button for large screens.
       const handleViewports = (e: MediaQueryList | MediaQueryListEvent) => {
         setExpanded(e.matches);
         btn.hidden = e.matches;
       };
-      const mediaQueries = window.matchMedia("(min-width: 50em)");
+      const mediaQueries = window.matchMedia('(min-width: 50em)');
       handleViewports(mediaQueries);
-      mediaQueries.addEventListener("change", handleViewports);
+      mediaQueries.addEventListener('change', handleViewports);
     }
   }
-  customElements.define("menu-button", MenuButton);
+  customElements.define('menu-button', MenuButton);
 </script>
 
 <style>
@@ -186,7 +186,7 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
     box-shadow: var(--shadow-md);
   }
 
-  .menu-button[aria-expanded="true"] {
+  .menu-button[aria-expanded='true'] {
     color: var(--gray-0);
     background: linear-gradient(180deg, var(--gray-600), transparent),
       radial-gradient(var(--gray-900), var(--gray-800) 150%);
@@ -199,7 +199,7 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
   .menu-button::before {
     position: absolute;
     inset: -1px;
-    content: "";
+    content: '';
     background: var(--gradient-stroke);
     border-radius: 999rem;
     z-index: -1;
@@ -308,7 +308,7 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
     .nav-items::before {
       position: absolute;
       inset: -1px;
-      content: "";
+      content: '';
       background: var(--gradient-stroke);
       border-radius: 999rem;
       z-index: -1;
