--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import '../styles/global.css';
 
 interface Props {
   title?: string | undefined;
@@ -7,7 +7,7 @@ interface Props {
 }
 
 const {
-  title = "Long Nhat Nguyen",
+  title = 'Long Nhat Nguyen',
   description = "Welcome to Long Nhat Nguyen's personal site",
 } = Astro.props;
 ---
@@ -30,11 +30,11 @@ const {
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL("og.png", Astro.url)} />
+<meta property="og:image" content={new URL('og.png', Astro.url)} />
 <meta name="twitter:url" content={Astro.url} />
 <meta name="twitter:title" content={title} />
 <meta name="twitter:description" content={description} />
-<meta name="twitter:image" content={new URL("og.png", Astro.url)} />
+<meta name="twitter:image" content={new URL('og.png', Astro.url)} />
 <meta name="twitter:card" content="summary_large_image" />
 
 <link rel="icon" type="image/png" href="/favicon.ico" />
@@ -49,24 +49,24 @@ const {
 <script is:inline>
   // This code is inlined in the head to make dark mode instant & blocking.
   const getThemePreference = () => {
-    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-      return localStorage.getItem("theme");
+    if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+      return localStorage.getItem('theme');
     }
-    return window.matchMedia("(prefers-color-scheme: dark)").matches
-      ? "dark"
-      : "light";
+    return window.matchMedia('(prefers-color-scheme: dark)').matches
+      ? 'dark'
+      : 'light';
   };
-  const isDark = getThemePreference() === "dark";
-  document.documentElement.classList[isDark ? "add" : "remove"]("theme-dark");
-  if (typeof localStorage !== "undefined") {
+  const isDark = getThemePreference() === 'dark';
+  document.documentElement.classList[isDark ? 'add' : 'remove']('theme-dark');
+  if (typeof localStorage !== 'undefined') {
     // Watch the document element and persist user preference when it changes.
     const observer = new MutationObserver(() => {
-      const isDark = document.documentElement.classList.contains("theme-dark");
-      localStorage.setItem("theme", isDark ? "dark" : "light");
+      const isDark = document.documentElement.classList.contains('theme-dark');
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
     });
     observer.observe(document.documentElement, {
       attributes: true,
-      attributeFilter: ["class"],
+      attributeFilter: ['class'],
     });
   }
 </script>
