--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from "./Icon.astro";
+import Icon from './Icon.astro';
 ---
 
 <theme-toggle>
@@ -31,7 +31,7 @@ import Icon from "./Icon.astro";
     color: var(--accent-overlay);
   }
   .icon.light::before {
-    content: "";
+    content: '';
     z-index: -1;
     position: absolute;
     inset: 0;
@@ -43,7 +43,7 @@ import Icon from "./Icon.astro";
   }
   :global(.theme-dark) .icon.dark,
   :global(html:not(.theme-dark)) .icon.light,
-  button[aria-pressed="false"] .icon.light {
+  button[aria-pressed='false'] .icon.light {
     color: var(--accent-text-over);
   }
   @media (prefers-reduced-motion: no-preference) {
@@ -64,22 +64,22 @@ import Icon from "./Icon.astro";
   class ThemeToggle extends HTMLElement {
     constructor() {
       super();
-      const button = this.querySelector("button")!;
+      const button = this.querySelector('button')!;
       /** Set the theme to dark/light mode. */
       const setTheme = (dark: boolean) => {
-        document.documentElement.classList[dark ? "add" : "remove"](
-          "theme-dark"
+        document.documentElement.classList[dark ? 'add' : 'remove'](
+          'theme-dark'
         );
-        button.setAttribute("aria-pressed", String(dark));
+        button.setAttribute('aria-pressed', String(dark));
       };
       // Toggle the theme when a user clicks the button.
-      button.addEventListener("click", () => setTheme(!this.isDark()));
+      button.addEventListener('click', () => setTheme(!this.isDark()));
       // Initialize button state to reflect current theme.
       setTheme(this.isDark());
     }
     isDark() {
-      return document.documentElement.classList.contains("theme-dark");
+      return document.documentElement.classList.contains('theme-dark');
     }
   }
-  customElements.define("theme-toggle", ThemeToggle);
+  customElements.define('theme-toggle', ThemeToggle);
 </script>
