--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import MainHead from "../components/MainHead.astro";
-import Nav from "../components/Nav.astro";
-import Footer from "../components/Footer.astro";
+import MainHead from '../components/MainHead.astro';
+import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
   title?: string | undefined;
@@ -24,16 +24,16 @@ const { title, description } = Astro.props;
 
     <script>
       // Add “loaded” class once the document has completely loaded.
-      addEventListener("load", () =>
-        document.documentElement.classList.add("loaded")
+      addEventListener('load', () =>
+        document.documentElement.classList.add('loaded')
       );
     </script>
 
     <style>
       :root {
         --_placeholder-bg: linear-gradient(transparent, transparent);
-        --bg-image-main: url("/backgrounds/bg-main-light-800w.jpg");
-        --bg-image-main-curves: url("/backgrounds/bg-main-light.svg");
+        --bg-image-main: url('/backgrounds/bg-main-light-800w.jpg');
+        --bg-image-main-curves: url('/backgrounds/bg-main-light.svg');
         --bg-image-footer: var(--_placeholder-bg);
         --bg-svg-blend-mode: overlay;
         --bg-blend-mode: darken;
@@ -44,8 +44,8 @@ const { title, description } = Astro.props;
       }
 
       :root.theme-dark {
-        --bg-image-main: url("/backgrounds/bg-main-dark-800w.jpg");
-        --bg-image-main-curves: url("/backgrounds/bg-main-dark.svg");
+        --bg-image-main: url('/backgrounds/bg-main-dark-800w.jpg');
+        --bg-image-main-curves: url('/backgrounds/bg-main-dark.svg');
         --bg-svg-blend-mode: darken;
         --bg-blend-mode: lighten;
       }
@@ -53,26 +53,26 @@ const { title, description } = Astro.props;
       /* These backgrounds are displayed below the fold, so we lazy load them
 			   once the `.loaded` class has been set.  */
       :root.loaded {
-        --bg-image-footer: url("/backgrounds/bg-footer-light-800w.jpg");
+        --bg-image-footer: url('/backgrounds/bg-footer-light-800w.jpg');
       }
       :root.loaded.theme-dark {
-        --bg-image-footer: url("/backgrounds/bg-footer-dark-800w.jpg");
+        --bg-image-footer: url('/backgrounds/bg-footer-dark-800w.jpg');
       }
 
       @media (min-width: 50em) {
         :root {
           --bg-scale: 1;
-          --bg-image-main: url("/backgrounds/bg-main-light-1440w.jpg");
+          --bg-image-main: url('/backgrounds/bg-main-light-1440w.jpg');
         }
         :root.theme-dark {
-          --bg-image-main: url("/backgrounds/bg-main-dark-1440w.jpg");
+          --bg-image-main: url('/backgrounds/bg-main-dark-1440w.jpg');
         }
 
         :root.loaded {
-          --bg-image-footer: url("/backgrounds/bg-footer-light-1440w.jpg");
+          --bg-image-footer: url('/backgrounds/bg-footer-light-1440w.jpg');
         }
         :root.loaded.theme-dark {
-          --bg-image-footer: url("/backgrounds/bg-footer-dark-1440w.jpg");
+          --bg-image-footer: url('/backgrounds/bg-footer-dark-1440w.jpg');
         }
       }
 
@@ -80,8 +80,8 @@ const { title, description } = Astro.props;
         min-height: 100%;
         isolation: isolate;
         background:
-					/*noise*/ url("/backgrounds/noise.png") top
-            center/220px repeat,
+					/*noise*/ url('/backgrounds/noise.png') top center/220px
+            repeat,
           /*footer*/ var(--bg-image-footer) bottom
             center/var(--bg-gradient-size) no-repeat,
           /*header1*/ var(--bg-image-main-curves) top
