--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import Hero from "../components/Hero.astro";
-import { Image } from "astro:assets";
-import Portrait from "../assets/portrait.jpg";
+import BaseLayout from '../layouts/BaseLayout.astro';
+import Hero from '../components/Hero.astro';
+import { Image } from 'astro:assets';
+import Portrait from '../assets/portrait.jpg';
 ---
 
 <BaseLayout>
