--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Mona Sans";
-  src: url("/fonts/Mona-Sans.woff2") format("woff2 supports variations");
+  font-family: 'Mona Sans';
+  src: url('/fonts/Mona-Sans.woff2') format('woff2 supports variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
   font-display: swap;
@@ -74,11 +74,11 @@
   --text-5xl: 4.5rem;
 
   /* Fonts */
-  --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --font-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --font-body: "Mona Sans", var(--font-system);
-  --font-brand: "Mona Sans", var(--font-system);
+  --font-body: 'Mona Sans', var(--font-system);
+  --font-brand: 'Mona Sans', var(--font-system);
 
   /* Transitions */
   --theme-transition: 0.2s ease-in-out;
