--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -38,12 +38,11 @@ const {
 <meta name="twitter:card" content="summary_large_image" />
 
 <link rel="icon" type="image/png" href="/favicon.ico" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  rel="preload"
-  href="/fonts/Mona-Sans.woff2"
-  as="font"
-  type="font/woff2"
-  crossorigin
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+  rel="stylesheet"
 />
 
 <script is:inline>
