--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: 'Mona Sans';
-  src: url('/fonts/Mona-Sans.woff2') format('woff2 supports variations');
-  font-weight: 200 900;
-  font-stretch: 75% 125%;
-  font-display: swap;
-}
-
 /* Global variables */
 :root {
   /* Colors */
@@ -76,9 +68,7 @@
   /* Fonts */
   --font-system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-  --font-body: 'Mona Sans', var(--font-system);
-  --font-brand: 'Mona Sans', var(--font-system);
+  --font-brand: 'Inter', var(--font-system);
 
   /* Transitions */
   --theme-transition: 0.2s ease-in-out;
@@ -139,7 +129,7 @@ body {
 body {
   background-color: var(--gray-999);
   color: var(--gray-200);
-  font-family: var(--font-body);
+  font-family: var(--font-brand);
   -webkit-font-smoothing: antialiased;
   line-height: 1.5;
 }
