--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,60 +2,29 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer>
-  <div class="group">
-    <p>&copy; {currentYear} Long Nhat Nguyen</p>
+<footer class="mt-32">
+  <div class="sm:px-8">
+    <div class="mx-auto max-w-7xl lg:px-8">
+      <div class="border-t border-zinc-100 pb-16 pt-10 dark:border-zinc-700/40">
+        <div class="relative px-4 sm:px-8 lg:px-12">
+          <div class="mx-auto max-w-2xl lg:max-w-5xl">
+            <div
+              class="flex flex-col items-center justify-between gap-6 sm:flex-row"
+            >
+              <div
+                class="flex gap-6 text-sm font-medium text-zinc-800 dark:text-zinc-200"
+              >
+                <a
+                  class="transition hover:text-teal-500 dark:hover:text-teal-400"
+                  href="https://github.com/torn4dom4n">GitHub</a
+                >
+              </div><p class="text-sm text-zinc-400 dark:text-zinc-500">
+                &copy; {currentYear} Long Nhat Nguyen. All rights reserved.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <p class="socials">
-    <a href="https://github.com/torn4dom4n"> GitHub</a>
-  </p>
 </footer>
-<style>
-  footer {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-    margin-top: auto;
-    border-top: 1px solid var(--gray-800);
-    padding: 3rem 2rem 3rem;
-    text-align: center;
-    color: var(--gray-400);
-    font-size: var(--text-sm);
-  }
-  footer a {
-    color: var(--gray-400);
-    text-decoration: 1px solid underline transparent;
-    text-underline-offset: 0.25em;
-    transition: text-decoration-color var(--theme-transition);
-  }
-  footer a:hover,
-  footer a:focus {
-    text-decoration-color: currentColor;
-  }
-  .group {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  .socials {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    flex-wrap: wrap;
-  }
-  @media (min-width: 50em) {
-    footer {
-      flex-direction: row;
-      justify-content: space-between;
-      padding: 2.5rem 5rem;
-    }
-    .group {
-      flex-direction: row;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-    .socials {
-      justify-content: flex-end;
-    }
-  }
-</style>
