--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,5 @@
 ---
 import MainHead from '../components/MainHead.astro';
-import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
 
 interface Props {
@@ -11,96 +10,24 @@ interface Props {
 const { title, description } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" class="h-full antialiased dark">
   <head>
     <MainHead title={title} description={description} />
   </head>
-  <body>
-    <div class="stack backgrounds">
-      <Nav />
-      <slot />
+  <body class="flex h-full flex-col bg-zinc-50 dark:bg-black">
+    <div class="fixed inset-0 flex justify-center sm:px-8">
+      <div class="flex w-full max-w-7xl lg:px-8">
+        <div
+          class="w-full bg-white ring-1 ring-zinc-100 dark:bg-zinc-900 dark:ring-zinc-300/20"
+        >
+        </div>
+      </div>
+    </div>
+    <div class="relative">
+      <main>
+        <slot />
+      </main>
       <Footer />
     </div>
-
-    <script>
-      // Add “loaded” class once the document has completely loaded.
-      addEventListener('load', () =>
-        document.documentElement.classList.add('loaded')
-      );
-    </script>
-
-    <style>
-      :root {
-        --_placeholder-bg: linear-gradient(transparent, transparent);
-        --bg-image-main: url('/backgrounds/bg-main-light-800w.jpg');
-        --bg-image-main-curves: url('/backgrounds/bg-main-light.svg');
-        --bg-image-footer: var(--_placeholder-bg);
-        --bg-svg-blend-mode: overlay;
-        --bg-blend-mode: darken;
-        --bg-image-aspect-ratio: 2.25;
-        --bg-scale: 1.68;
-        --bg-aspect-ratio: calc(var(--bg-image-aspect-ratio) / var(--bg-scale));
-        --bg-gradient-size: calc(var(--bg-scale) * 100%);
-      }
-
-      :root.theme-dark {
-        --bg-image-main: url('/backgrounds/bg-main-dark-800w.jpg');
-        --bg-image-main-curves: url('/backgrounds/bg-main-dark.svg');
-        --bg-svg-blend-mode: darken;
-        --bg-blend-mode: lighten;
-      }
-
-      /* These backgrounds are displayed below the fold, so we lazy load them
-			   once the `.loaded` class has been set.  */
-      :root.loaded {
-        --bg-image-footer: url('/backgrounds/bg-footer-light-800w.jpg');
-      }
-      :root.loaded.theme-dark {
-        --bg-image-footer: url('/backgrounds/bg-footer-dark-800w.jpg');
-      }
-
-      @media (min-width: 50em) {
-        :root {
-          --bg-scale: 1;
-          --bg-image-main: url('/backgrounds/bg-main-light-1440w.jpg');
-        }
-        :root.theme-dark {
-          --bg-image-main: url('/backgrounds/bg-main-dark-1440w.jpg');
-        }
-
-        :root.loaded {
-          --bg-image-footer: url('/backgrounds/bg-footer-light-1440w.jpg');
-        }
-        :root.loaded.theme-dark {
-          --bg-image-footer: url('/backgrounds/bg-footer-dark-1440w.jpg');
-        }
-      }
-
-      .backgrounds {
-        min-height: 100%;
-        isolation: isolate;
-        background:
-					/*noise*/ url('/backgrounds/noise.png') top center/220px
-            repeat,
-          /*footer*/ var(--bg-image-footer) bottom
-            center/var(--bg-gradient-size) no-repeat,
-          /*header1*/ var(--bg-image-main-curves) top
-            center/var(--bg-gradient-size) no-repeat,
-          /*header2*/ var(--bg-image-main) top center/var(--bg-gradient-size)
-            no-repeat,
-          /*base*/ var(--gray-999);
-        background-blend-mode: /*noise*/ overlay,
-          /*footer*/ var(--bg-blend-mode), /*header1*/ var(--bg-svg-blend-mode),
-          /*header2*/ normal, /*base*/ normal;
-      }
-      @media (forced-colors: active) {
-        /* Deactivate custom backgrounds for high contrast users. */
-        .backgrounds {
-          background: none;
-          background-blend-mode: none;
-          --bg-gradient-size: none;
-        }
-      }
-    </style>
   </body>
 </html>
