--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,7 +10,7 @@ interface Props {
 const { title, description } = Astro.props;
 ---
 
-<html lang="en" class="h-full antialiased dark">
+<html lang="en" class="dark h-full antialiased">
   <head>
     <MainHead title={title} description={description} />
   </head>
