--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Portrait from '../assets/portrait.jpg';
 ---
 
 <BaseLayout>
-  <div class="sm:px-8 mt-16 sm:mt-32">
+  <div class="mt-16 sm:mt-32 sm:px-8">
     <div class="mx-auto max-w-7xl lg:px-8">
       <div class="relative px-4 sm:px-8 lg:px-12">
         <div class="mx-auto max-w-2xl lg:max-w-5xl">
