--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,11 +14,11 @@ const { title, description } = Astro.props;
   <head>
     <MainHead title={title} description={description} />
   </head>
-  <body class="flex h-full flex-col bg-zinc-50 dark:bg-black">
+  <body class="flex h-full flex-col bg-slate-100 dark:bg-slate-950">
     <div class="fixed inset-0 flex justify-center sm:px-8">
       <div class="flex w-full max-w-7xl lg:px-8">
         <div
-          class="w-full bg-white ring-1 ring-zinc-100 dark:bg-zinc-900 dark:ring-zinc-300/20"
+          class="w-full bg-slate-200 ring-1 ring-slate-100 dark:bg-slate-900 dark:ring-slate-800"
         >
         </div>
       </div>
