update Icon & Footer style

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ const currentYear = new Date().getFullYear();
                 class="flex gap-6 text-sm font-medium text-slate-950 dark:text-slate-200"
               >
                 <a
-                  class="transition hover:text-teal-500 dark:hover:text-teal-400"
+                  class="underline decoration-transparent decoration-solid decoration-1 underline-offset-2 transition duration-200 ease-in-out hover:decoration-current focus:decoration-current"
                   href="https://github.com/torn4dom4n">GitHub</a
                 >
               </div><p class="text-sm text-slate-950 dark:text-slate-200">
