--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,27 +20,33 @@ import Portrait from '../assets/portrait.jpg';
                   width={1024}
                   sizes="(min-width: 1024px) 32rem, 20rem"
                   alt="I'm Long Nhat Nguyen"
-                  class="aspect-square rotate-3 rounded-2xl bg-slate-100 object-cover dark:bg-slate-950"
+                  class="aspect-square rotate-3 rounded-2xl bg-zinc-100 object-cover dark:bg-zinc-800"
                 />
               </div>
             </div>
             <div class="lg:order-first lg:row-span-2">
               <h1
-                class="text-4xl font-bold tracking-tight text-slate-950 dark:text-slate-200 sm:text-5xl"
+                class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl"
               >
-                Hello 👋, my name is Long Nhat Nguyen
+                Hello, my name is Long Nhat Nguyen.
               </h1>
               <div
-                class="mt-6 space-y-7 text-base text-slate-900 dark:text-slate-300"
+                class="mt-6 space-y-7 text-base text-zinc-600 dark:text-zinc-400"
               >
-                <p>I love music 🎵 and photography 📸.</p>
+                <p>I come from Vietnam, a land of beauty and diversity.</p>
                 <p>
-                  I'm a man of focus, commitment, sheer will,... something you
-                  know very litte about.
+                  Music and photography are my hobbies and my ways of expressing
+                  myself. I love to explore different kinds of music and to take
+                  photos of the amazing scenes and people around me. I also have
+                  a curiosity for the world and its wonders. I like to learn
+                  about new places, cultures, or technologies that can enrich my
+                  knowledge and experience.
                 </p>
                 <p>
-                  If we'll ever be remembered, I know it'll be for the way that
-                  we love.
+                  My favorite quote is “If we’ll ever be remembered, I know
+                  it’ll be for the way that we love”. It reflects my belief that
+                  love is the most important thing in life and the legacy we
+                  leave behind.
                 </p>
               </div>
               <div class="mt-6 flex gap-6">
@@ -51,7 +57,7 @@ import Portrait from '../assets/portrait.jpg';
                 >
                   <Icon
                     name="simple-icons:github"
-                    class="h-6 w-6 flex-none text-slate-500 transition hover:text-[#333] dark:hover:text-[#f5f5f5]"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#333] dark:hover:text-[#f5f5f5]"
                   />
                 </a>
                 <a
@@ -61,7 +67,7 @@ import Portrait from '../assets/portrait.jpg';
                 >
                   <Icon
                     name="simple-icons:twitter"
-                    class="h-6 w-6 flex-none text-slate-500 transition hover:text-[#1da1f2]"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#1da1f2]"
                   />
                 </a>
                 <a
@@ -71,7 +77,7 @@ import Portrait from '../assets/portrait.jpg';
                 >
                   <Icon
                     name="simple-icons:facebook"
-                    class="h-6 w-6 flex-none text-slate-500 transition hover:text-[#1877f2]"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#1877f2]"
                   />
                 </a>
                 <a
@@ -81,7 +87,7 @@ import Portrait from '../assets/portrait.jpg';
                 >
                   <Icon
                     name="simple-icons:instagram"
-                    class="h-6 w-6 flex-none text-slate-500 transition hover:text-[#fd1d1d]"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#fd1d1d]"
                   />
                 </a>
               </div>
