--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,21 +15,18 @@ const currentYear = new Date().getFullYear();
                 <div
                   class="flex flex-row gap-1 fill-zinc-600 hover:fill-zinc-900 dark:fill-zinc-400 dark:hover:fill-zinc-100"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="32"
-                    height="32"
-                    viewBox="0 0 24 24"
-                  >
-                    <path d="M1 21h22L12 2"></path>
+                  <svg width="32" height="32" viewBox="0 0 1000 1000">
+                    <g transform="matrix(44.5 0 0 44.5 500 500)">
+                      <path transform="translate(-12, -11.5)" d="M1 21h22L12 2"
+                      ></path>
+                    </g>
                   </svg>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="32"
-                    height="32"
-                    viewBox="0 0 24 24"
-                  >
-                    <path d="M15 2.013H9V9H2v6h7v6.987h6V15h7V9h-7z"></path>
+                  <svg width="32" height="32" viewBox="0 0 1000 1000">
+                    <g transform="matrix(42.5 0 0 42.5 500 500)">
+                      <path
+                        transform="translate(-12, -12)"
+                        d="M15 2.013H9V9H2v6h7v6.987h6V15h7V9h-7z"></path>
+                    </g>
                   </svg>
                 </div>
               </a>
