--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -20,7 +20,7 @@ const {
 />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
-<link rel="shortcut icon" type="image/png" href="/favicon.ico" />
+<link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="sitemap" type="application/xml" href="/sitemap-index.xml" />
 <title>{title}</title>
 <meta name="title" content={title} />
@@ -36,5 +36,3 @@ const {
 <meta name="twitter:description" content={description} />
 <meta name="twitter:image" content={new URL('og.png', Astro.url)} />
 <meta name="twitter:card" content="summary_large_image" />
-
-<link rel="icon" type="image/png" href="/favicon.ico" />
