My name is Long Nhat Nguyen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,8 @@ import Portrait from '../assets/portrait.jpg';
                   src={Portrait}
                   width={1024}
                   sizes="(min-width: 1024px) 32rem, 20rem"
-                  alt="I'm Long Nhat Nguyen"
-                  class="aspect-square rotate-3 rounded-2xl bg-zinc-100 object-cover dark:bg-zinc-800"
+                  alt="My name is Long Nhat Nguyen"
+                  class="duration-400 aspect-square rotate-3 rounded-2xl bg-zinc-100 object-cover transition hover:scale-105 dark:bg-zinc-800"
                 />
               </div>
             </div>
