add text gradient

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,13 +20,13 @@ import Portrait from '../assets/portrait.jpg';
                   width={1024}
                   sizes="(min-width: 1024px) 32rem, 20rem"
                   alt="My name is Long Nhat Nguyen"
-                  class="duration-400 aspect-square rotate-3 rounded-2xl bg-zinc-100 object-cover transition hover:scale-105 dark:bg-zinc-800"
+                  class="duration-400 aspect-square rotate-3 rounded-2xl bg-zinc-100 object-cover shadow shadow-cyan-500 transition hover:scale-105 dark:bg-zinc-800"
                 />
               </div>
             </div>
             <div class="lg:order-first lg:row-span-2">
               <h1
-                class="text-4xl font-bold tracking-tight text-zinc-800 dark:text-zinc-100 sm:text-5xl"
+                class="bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text py-3 text-4xl font-bold tracking-tight text-transparent sm:text-5xl"
               >
                 Hello, my name is Long Nhat Nguyen.
               </h1>
