add more socials

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const {
   title = 'Long Nhat Nguyen',
-  description = "Welcome to Long Nhat Nguyen's personal site",
+  description = "Welcome to Long Nhat Nguyen's website",
 } = Astro.props;
 ---
 
