--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Portrait from '../assets/portrait.jpg';
                   width={1024}
                   sizes="(min-width: 1024px) 32rem, 20rem"
                   alt="My name is Long Nhat Nguyen"
-                  class="duration-400 aspect-square rotate-3 rounded-2xl bg-zinc-100 object-cover shadow shadow-cyan-500 transition hover:scale-105 dark:bg-zinc-800"
+                  class="duration-400 aspect-square rotate-3 rounded-2xl bg-zinc-100 object-cover shadow shadow-cyan-500 transition dark:bg-zinc-800"
                 />
               </div>
             </div>
@@ -28,7 +28,7 @@ import Portrait from '../assets/portrait.jpg';
               <h1
                 class="bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text py-3 text-4xl font-bold tracking-tight text-transparent sm:text-5xl"
               >
-                Hello, my name is Long Nhat Nguyen.
+                Hello humans, my name is Long Nhat Nguyen.
               </h1>
               <div
                 class="mt-6 space-y-7 text-base text-zinc-600 dark:text-zinc-400"
@@ -49,10 +49,11 @@ import Portrait from '../assets/portrait.jpg';
                   leave behind.
                 </p>
               </div>
-              <div class="mt-6 flex gap-6">
+              <div class="mt-6 flex flex-wrap gap-1">
                 <a
-                  class="group -m-1 p-1"
-                  aria-label="Follow on GitHub"
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   href="https://github.com/torn4dom4n"
                 >
                   <Icon
@@ -61,18 +62,20 @@ import Portrait from '../assets/portrait.jpg';
                   />
                 </a>
                 <a
-                  class="group -m-1 p-1"
-                  aria-label="Follow on Twitter"
-                  href="https://twitter.com/torn4dom4n"
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://www.youtube.com/@torn4dom4n"
                 >
                   <Icon
-                    name="simple-icons:twitter"
-                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#1da1f2]"
+                    name="simple-icons:youtube"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#ff0000]"
                   />
                 </a>
                 <a
-                  class="group -m-1 p-1"
-                  aria-label="Follow on Facebook"
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   href="https://facebook.com/torn4dom4n"
                 >
                   <Icon
@@ -81,13 +84,69 @@ import Portrait from '../assets/portrait.jpg';
                   />
                 </a>
                 <a
-                  class="group -m-1 p-1"
-                  aria-label="Follow on Instagram"
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
                   href="https://instagram.com/torn4dom4n"
                 >
                   <Icon
                     name="simple-icons:instagram"
                     class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#fd1d1d]"
+                  />
+                </a>
+                <a
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://twitter.com/torn4dom4n"
+                >
+                  <Icon
+                    name="simple-icons:twitter"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#1da1f2]"
+                  />
+                </a>
+                <a
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://reddit.com/user/torn4dom4n"
+                >
+                  <Icon
+                    name="simple-icons:reddit"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#ff4500]"
+                  />
+                </a>
+                <a
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://linkedin.com/in/torn4dom4n"
+                >
+                  <Icon
+                    name="simple-icons:linkedin"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#0a66c2]"
+                  />
+                </a>
+                <a
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://pinterest.com/torn4dom4n"
+                >
+                  <Icon
+                    name="simple-icons:pinterest"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#e60023]"
+                  />
+                </a>
+                <a
+                  class="group m-1 p-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://soundcloud.com/torn4dom4n"
+                >
+                  <Icon
+                    name="simple-icons:soundcloud"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#ff8800]"
                   />
                 </a>
               </div>
