--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="mt-32">
+<footer data-animate style="--stagger:0" class="mt-32">
   <div class="sm:px-8">
     <div class="mx-auto max-w-7xl lg:px-8">
       <div class="border-t border-zinc-100 pb-16 pt-10 dark:border-zinc-700/40">
