--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import MainHead from '../components/MainHead.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 interface Props {
@@ -24,6 +25,7 @@ const { title, description } = Astro.props;
       </div>
     </div>
     <div class="relative">
+      <Header />
       <main>
         <slot />
       </main>
