--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Portrait from '../assets/portrait.jpg';
           <div
             class="grid grid-cols-1 gap-y-16 lg:grid-cols-2 lg:grid-rows-[auto_1fr] lg:gap-y-12"
           >
-            <div class="lg:pl-20">
+            <div data-animate style="--stagger:1" class="lg:pl-20">
               <div class="max-w-xs px-2.5 lg:max-w-none">
                 <Image
                   src={Portrait}
@@ -26,11 +26,15 @@ import Portrait from '../assets/portrait.jpg';
             </div>
             <div class="lg:order-first lg:row-span-2">
               <h1
+                data-animate
+                style="--stagger:2"
                 class="bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text py-3 text-4xl font-bold tracking-tight text-transparent sm:text-5xl"
               >
                 Hello humans, my name is Long Nhat Nguyen.
               </h1>
               <div
+                data-animate
+                style="--stagger:3"
                 class="mt-6 space-y-7 text-base text-zinc-600 dark:text-zinc-400"
               >
                 <p>I come from Vietnam, a land of beauty and diversity.</p>
@@ -49,7 +53,11 @@ import Portrait from '../assets/portrait.jpg';
                   leave behind.
                 </p>
               </div>
-              <div class="mt-6 flex flex-wrap gap-1">
+              <div
+                data-animate
+                style="--stagger:4"
+                class="mt-6 flex flex-wrap gap-1"
+              >
                 <a
                   class="group m-1 p-1"
                   target="_blank"
