--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,6 +60,7 @@ import Portrait from '../assets/portrait.jpg';
               >
                 <a
                   class="group m-1 p-1"
+                  aria-label="Me on GitHub"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://github.com/torn4dom4n"
@@ -71,6 +72,7 @@ import Portrait from '../assets/portrait.jpg';
                 </a>
                 <a
                   class="group m-1 p-1"
+                  aria-label="Me on YouTube"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://www.youtube.com/@torn4dom4n"
@@ -82,6 +84,7 @@ import Portrait from '../assets/portrait.jpg';
                 </a>
                 <a
                   class="group m-1 p-1"
+                  aria-label="Me on Facebook"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://facebook.com/torn4dom4n"
@@ -93,6 +96,7 @@ import Portrait from '../assets/portrait.jpg';
                 </a>
                 <a
                   class="group m-1 p-1"
+                  aria-label="Me on Instagram"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://instagram.com/torn4dom4n"
@@ -104,6 +108,7 @@ import Portrait from '../assets/portrait.jpg';
                 </a>
                 <a
                   class="group m-1 p-1"
+                  aria-label="Me on Twitter"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://twitter.com/torn4dom4n"
@@ -115,17 +120,7 @@ import Portrait from '../assets/portrait.jpg';
                 </a>
                 <a
                   class="group m-1 p-1"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  href="https://reddit.com/user/torn4dom4n"
-                >
-                  <Icon
-                    name="simple-icons:reddit"
-                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#ff4500]"
-                  />
-                </a>
-                <a
-                  class="group m-1 p-1"
+                  aria-label="Me on LinkedIn"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://linkedin.com/in/torn4dom4n"
@@ -137,6 +132,19 @@ import Portrait from '../assets/portrait.jpg';
                 </a>
                 <a
                   class="group m-1 p-1"
+                  aria-label="Me on Reddit"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://reddit.com/user/torn4dom4n"
+                >
+                  <Icon
+                    name="simple-icons:reddit"
+                    class="h-6 w-6 flex-none text-zinc-500 transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-[#ff4500]"
+                  />
+                </a>
+                <a
+                  class="group m-1 p-1"
+                  aria-label="Me on Pinterest"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://pinterest.com/torn4dom4n"
@@ -148,6 +156,7 @@ import Portrait from '../assets/portrait.jpg';
                 </a>
                 <a
                   class="group m-1 p-1"
+                  aria-label="Me on SoundCloud"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://soundcloud.com/torn4dom4n"
