--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,8 +30,8 @@ const currentYear = new Date().getFullYear();
                   </svg>
                 </div>
               </a>
-              <p class="text-sm text-zinc-800 dark:text-zinc-400">
-                &copy; {currentYear} Long Nhat Nguyen. All rights reserved.
+              <p class="text-center text-sm text-zinc-800 dark:text-zinc-400">
+                &copy; {currentYear} Long Nhat Nguyen.
               </p>
             </div>
           </div>
