use local fonts

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,7 +31,7 @@ const currentYear = new Date().getFullYear();
                 </div>
               </a>
               <p class="text-center text-sm text-zinc-800 dark:text-zinc-400">
-                &copy; {currentYear} Long Nhat Nguyen.
+                &copy; {currentYear} Long Nhat Nguyen
               </p>
             </div>
           </div>
