--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,6 +1,5 @@
 ---
 import '../styles/global.css';
-import '@fontsource/jetbrains-mono';
 
 interface Props {
   title?: string | undefined;
@@ -37,3 +36,18 @@ const {
 <meta name="twitter:description" content={description} />
 <meta name="twitter:image" content={new URL('og.png', Astro.url)} />
 <meta name="twitter:card" content="summary_large_image" />
+
+<link
+  rel="preload"
+  href="./fonts/Mona-Sans.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
+<link
+  rel="preload"
+  href="./fonts/Hubot-Sans.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
+/>
