--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,9 +28,9 @@ import Portrait from '../assets/portrait.jpg';
               <h1
                 data-animate
                 style="--stagger:2"
-                class="bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text py-3 text-4xl font-bold tracking-tight text-transparent sm:text-5xl"
+                class="bg-gradient-to-r from-cyan-500 to-blue-500 bg-clip-text py-3 font-['Hubot_Sans'] text-4xl font-bold tracking-tight text-transparent sm:text-5xl"
               >
-                Hello humans, my name is Long Nhat Nguyen.
+                Hello humans, my name is Long Nhat Nguyen
               </h1>
               <div
                 data-animate
