--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,10 +2,10 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer data-animate style="--stagger:0" class="mt-32">
+<footer data-animate style="--stagger:0" class="mt-16">
   <div class="sm:px-8">
     <div class="mx-auto max-w-7xl lg:px-8">
-      <div class="border-t border-zinc-100 pb-16 pt-10 dark:border-zinc-700/40">
+      <div class="border-t border-zinc-100 py-8 dark:border-zinc-700/40">
         <div class="relative px-4 sm:px-8 lg:px-12">
           <div class="mx-auto max-w-2xl lg:max-w-5xl">
             <div
