--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -39,14 +39,14 @@ const {
 
 <link
   rel="preload"
-  href="./fonts/Mona-Sans.woff2"
+  href="/fonts/Mona-Sans.woff2"
   as="font"
   type="font/woff2"
   crossorigin
 />
 <link
   rel="preload"
-  href="./fonts/Hubot-Sans.woff2"
+  href="/fonts/Hubot-Sans.woff2"
   as="font"
   type="font/woff2"
   crossorigin
