--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
     url('/fonts/Mona-Sans.woff2') format('woff2-variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
+  font-display: swap;
 }
 
 @font-face {
@@ -16,6 +17,7 @@
     url('/fonts/Hubot-Sans.woff2') format('woff2-variations');
   font-weight: 200 900;
   font-stretch: 75% 125%;
+  font-display: swap;
 }
 
 [data-animate] {
