--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,8 +47,8 @@ import Portrait from '../assets/portrait.jpg';
                   knowledge and experience.
                 </p>
                 <p>
-                  My favorite quote is “If we’ll ever be remembered, I know
-                  it’ll be for the way that we love”. It reflects my belief that
+                  My favorite quote is “If we'll ever be remembered, I know
+                  it'll be for the way that we love”. It reflects my belief that
                   love is the most important thing in life and the legacy we
                   leave behind.
                 </p>
