--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -30,11 +30,11 @@ const {
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL('og.png', Astro.url)} />
+<meta property="og:image" content={new URL('og.svg', Astro.url)} />
 <meta name="twitter:url" content={Astro.url} />
 <meta name="twitter:title" content={title} />
 <meta name="twitter:description" content={description} />
-<meta name="twitter:image" content={new URL('og.png', Astro.url)} />
+<meta name="twitter:image" content={new URL('og.svg', Astro.url)} />
 <meta name="twitter:card" content="summary_large_image" />
 
 <link
