--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -4,38 +4,41 @@ import '../styles/global.css';
 interface Props {
   title?: string | undefined;
   description?: string | undefined;
+  ogImage?: URL | undefined;
 }
 
-const {
-  title = 'Long Nhat Nguyen',
-  description = "Welcome to Long Nhat Nguyen's website",
-} = Astro.props;
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+
+if (Astro.props.ogImage === undefined) {
+  Astro.props.ogImage = new URL('og.svg', Astro.url);
+}
+
+const { title, description, ogImage } = Astro.props;
 ---
 
 <meta charset="utf-8" />
 <meta name="robots" content="index, follow" />
-<meta
-  name="googlebot"
-  content="index, follow, max-video-preview:-1, max-image-preview:large, max-snippet:-1"
-/>
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="googlebot" content="index, follow" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
+<link rel="canonical" href={canonicalURL} />
 <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="sitemap" type="application/xml" href="/sitemap-index.xml" />
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
-<meta name="author" content="Long Nhat Nguyen" />
+
 <meta property="og:type" content="website" />
-<meta property="og:url" content={Astro.url} />
+<meta property="og:url" content={canonicalURL} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL('og.svg', Astro.url)} />
-<meta name="twitter:url" content={Astro.url} />
-<meta name="twitter:title" content={title} />
-<meta name="twitter:description" content={description} />
-<meta name="twitter:image" content={new URL('og.svg', Astro.url)} />
-<meta name="twitter:card" content="summary_large_image" />
+<meta property="og:image" content={ogImage} />
+
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content={canonicalURL} />
+<meta property="twitter:title" content={title} />
+<meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={ogImage} />
 
 <link
   rel="preload"
